--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.416.0",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "punycode": "^2.3.1",
     "react": "^18",
